fixed header sign (not responsive)

--- a/css/styles.css
+++ b/css/styles.css
@@ -137,12 +137,9 @@ h4 {
 .streetview {
   position: relative; }
 
-.streetview {
-  background: #180724; }
-
 .background-skyline {
   width: 100vw;
-  height: calc(100vh + 40px);
+  height: calc(100vh + 40px + 100px);
   background-image: url("../assets/backgrounds/bg.svg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -151,11 +148,11 @@ h4 {
   left: 0; }
 
 .skyline {
-  height: calc(100vh + 40px);
+  height: calc(100vh + 40px + 100px);
   transform-style: preserve-3d; }
 
 .layer {
-  height: 100vh;
+  height: calc(100vh + 100px);
   background-position: bottom center;
   width: 100%;
   height: 100%;
@@ -164,7 +161,7 @@ h4 {
 
 #layer-1 {
   background-image: url("../assets/backgrounds/perspective1.svg");
-  transform: translateZ(-1px) translateY(-15vh) scale(2); }
+  transform: translateZ(-1px) translateY(-10vh) scale(2); }
 
 #layer-2 {
   background-image: url("../assets/backgrounds/perspective2.svg");
@@ -175,6 +172,7 @@ h4 {
   transform: translateZ(0px) translateY(10vh); }
 
 .streetview {
+  background: #180724;
   margin-top: -1px; }
 
 .floor {
@@ -196,6 +194,42 @@ h4 {
   display: block;
   margin: auto;
   padding-top: 60px; }
+
+.heading {
+  width: 600px;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  color: #b9f734;
+  font-size: 70px;
+  line-height: 1;
+  margin-top: 20px; }
+
+.header {
+  left: calc(50vw - 300px);
+  margin: 0 auto;
+  background-image: url("../assets/graphics/sign_no_words.svg");
+  background-position: top center;
+  background-repeat: no-repeat;
+  width: 600px;
+  height: 300px;
+  position: absolute; }
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding-top: 10px;
+  width: 80%;
+  margin: 0 auto;
+  height: calc(3em - 1px);
+  color: #180724;
+  font-size: 1.4em;
+  font-weight: bold; }
+
+.navbar-hack {
+  width: 100%;
+  display: inline-block; }
 
 .sign {
   position: absolute;
