--- a/scss/parallax.scss
+++ b/scss/parallax.scss
@@ -1,4 +1,4 @@
-.parallax {
+.parallax { // wraps the entire page and sets perspective
   position: relative;
   height: 100vh;
   overflow-x: hidden;
@@ -8,17 +8,13 @@
 }
 
 .skyline,
-.streetview {
+.streetview { // page split in two
   position: relative;
 }
 
-.streetview {
-  background: $bg-color;
-}
-
-.background-skyline {
+.background-skyline { // positions background to stick for skyline
   width: 100vw;
-  height: calc(100vh + 40px);
+  height: calc(100vh + 40px + 100px); // same as skyline height
   background-image: url("../assets/backgrounds/bg.svg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -27,16 +23,13 @@
   left: 0;
 }
 
-.skyline {
-  height: calc(100vh + 40px);
-  // background-image: url("../assets/backgrounds/bg.svg");
-  // background-repeat: no-repeat;
-  // background-size: cover;
-  transform-style: preserve-3d;
+.skyline { // top half
+  height: calc(100vh + 40px + 100px); // same as background-skyline height; determines height of parallax scrolling skyline container
+  transform-style: preserve-3d; // preserve perspective in non-chrome browsers
 }
 
-.layer {
-  height: 100vh;
+.layer { // layers of the skyline
+  height: calc(100vh + 100px); // should be skyline height - 40px
   background-position: bottom center;
   width: 100%;
   height: 100%;
@@ -46,25 +39,23 @@
 
 #layer-1 {
   background-image: url("../assets/backgrounds/perspective1.svg");
-  transform: translateZ(-1px) translateY(-15vh) scale(2);
-  // transform: translate3d(0px, 80px, 0px);
+  transform: translateZ(-1px) translateY(-10vh) scale(2);
 }
 #layer-2 {
   background-image: url("../assets/backgrounds/perspective2.svg");
   transform: translateZ(-0.5px) translateY(-5vh) scale(1.5);
-  // transform: translate3d(0px, 120px, 0px);
 }
 #layer-3 {
   background-image: url("../assets/backgrounds/perspective3.svg");
   transform: translateZ(0px) translateY(10vh);
-  // transform: translate3d(0px, 300px, 0px);
 }
 
-.streetview {
+.streetview { // bottom half of page
+  background: $bg-color;
   margin-top: -1px;
 }
 
 .floor {
   position: relative;
-  margin-bottom: -10px;
+  margin-bottom: -10px; // deletes a weird gap
 }
